macro-template/tests/ui/err/bracketed_variables.stderr
error: multiple template variables must use parentheses, such as `(Ty, Width)`
 --> tests/ui/err/bracketed_variables.rs:5:13
  |
5 |         for [Ty, Width] in [
  |             ^
